# taxoformer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark/: common.py  run_benchmark.py  sample_dataset.py  smoke_test.py
scripts/: convert_checkpoint.py  upload_to_hf.py
taxoformer/: __init__.py  _engine.py  inference.py  model.py  tokenizer.py
