[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taxoformer"
version = "0.1.0"
description = "Predict taxonomic lineages directly from protein sequences (ESM-2 + taxonomy decoder)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "The TaxoFormer Authors" }]
dependencies = [
    "torch>=2.1",
    "fair-esm>=2.0.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.optional-dependencies]
benchmark = ["ete3>=3.1.2", "matplotlib>=3.5", "tqdm>=4.62"]

[project.urls]
Homepage = "https://github.com/msparsa/taxoformer"
Weights = "https://huggingface.co/msparsa/taxoformer"

[tool.setuptools.packages.find]
include = ["taxoformer*"]
